--- a/src/Pages/Homepage/HomePage.css
+++ b/src/Pages/Homepage/HomePage.css
@@ -36,3 +36,17 @@
     padding: 100px 20px;
     text-align: center;
 }
+.swiper-scrollbar {
+    background-color: rgba(246, 247, 249, 0.1);
+    /* Light background */
+    border-radius: 10px;
+    height: 4px;
+}
+
+.swiper-scrollbar-drag {
+    background-color: rgba(246, 247, 249, 1) !important;
+    /* Golden color for the draggable thumb */
+    border-radius: 10px;
+    height: 100%;
+    cursor: pointer;
+}
