--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,107 @@
-.footer {
-    background-color: #111;
-    color: #fff;
-    padding: 50px 20px;
+footer {
+    display: flex;
+    flex-direction: column;
 }
 
-.footer-container {
+.footer-top {
+    font-family: "Public Sans", sans-serif;
+    background: white;
+    padding: 120px 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.footer-title {
+    font-weight: 600;
+    font-size: 100px;
+    letter-spacing: 0.07rem;
+}
+
+.footer-main {
+    padding: 116px;
+    background-color: #191f28;
+    color: #ffffff;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
 }
 
-.footer-container h4 {
+.footer-logo-container {
+    max-width: 300px;
     margin-bottom: 10px;
 }
 
-.footer-links,
-.footer-services {
+.footer-description {
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: left;
+}
+
+.footer-section h4 {
+    color: #666666;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.footer-section ul {
     list-style-type: none;
+    padding: 0;
+        margin: 0;
+    }
+    
+    .footer-section li {
+        margin-bottom: 5px;
+    }
+    
+    .footer-section a {
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 14px;
+        display: block;
 }
 
 .footer-bottom {
     display: flex;
-    justify-content: space-between;
-    border-top: 1px solid #333;
-    padding-top: 20px;
+    gap: 320px;
     font-size: 12px;
-}
+    background-color: rgb(25, 31, 40);
+        color: white;
+        padding: 116px;
+        padding-top: unset;
+        padding-bottom: 0.5rem;
+    }
+    
+    .footer-bottom p {
+        font-size: 15px;
+    }
+    
+    .footer-bottom p:first-of-type {
+        color: #717780;
+    }
+    
+    @media screen and (max-width: 750px) {
+        .footer-top {
+            padding: 80px;
+        }
+    
+        .footer-title {
+            font-size: 50px;
+        }
+    }
+    
+    @media screen and (max-width: 950px) {
+        .footer-main {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 2rem;
+        }
+    
+        .footer-section {
+            text-align: left;
+        }
+    
+        .footer-bottom {
+            gap: 1rem;
+        }
+        }
