--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     /* Keep this below the drawer overlay's z-index */
-    gap: 21rem;
+    /*gap: 21rem;*/
     align-items: center;
     padding: 32px 80px;
     background-color: rgba(255, 255, 255, 0.85);
@@ -11,6 +11,7 @@
     top: 0;
     z-index: 10;
     backdrop-filter: blur(10px);
+    justify-content: space-between
     /* Adds a background blur */
 }
 
@@ -46,12 +47,17 @@
     display: none;
 }
 
+.hidden-div {
+    width: 50px;
+}
 /* Show the hamburger icon and hide nav-links on smaller screens */
 @media (max-width: 752px) {
     .nav-links {
         display: none;
     }
-
+                .hidden-div {
+                    display: none;
+                }
     .hamburger {
         display: block;
     }
