--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,9 +14,11 @@ footer {
 }
 
 .footer-title {
-    font-weight: 600;
+    text-align: center;
+        font-weight: 400;
     font-size: 100px;
     letter-spacing: 0.07rem;
+    line-height: 110px;
 }
 
 .footer-main {
