--- a/src/components/PagesHeader/PagesHeader.css
+++ b/src/components/PagesHeader/PagesHeader.css
@@ -1,7 +1,9 @@
 .pages-header-container {
     width: 100%;
     height: 500px;
-    background-color: #1c1f28;
+    /* background-color: #1c1f28; */
+    
+        background: url(../../Assets/images/header-bg.png);
     /* Background color */
     position: relative;
     display: flex;
@@ -35,9 +37,16 @@
 
 .pages-header-title h1 {
     max-width: 1000px;
-    font-size: 100px;
-    font-weight: 200;
+    font-size: 108px;
+        font-weight: 400;
     text-align: center;
     color: #ffffff;
     position: relative;
+}
+@media screen and (max-width: 1200px) {
+    .pages-header-image {
+
+        padding: unset !important;
+    }
+
 }
