--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -93,6 +93,16 @@ footer {
     }
     
     @media screen and (max-width: 950px) {
+        .footer-logo-container {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            }
+        
+            .footer-title {
+                line-height: unset;
+                font-size: 40px;
+            }
         .footer-main {
             flex-direction: column;
             align-items: flex-start;
@@ -106,4 +116,8 @@ footer {
         .footer-bottom {
             gap: 1rem;
         }
+                                                                                                                                .footer-bottom {
+                                                                                                                                    display: unset;
+                                                                                                                                    padding: 50px;
+                                                                                                                                }
         }
