--- a/src/Pages/HouseRenovation/HouseRenovation.css
+++ b/src/Pages/HouseRenovation/HouseRenovation.css
@@ -47,6 +47,13 @@
         display: flex;
         flex-direction: column;
     }
+                .house-renovation-description {
+                    width: 100%;
+                }
+        
+                .house-renovation-text {
+                    width: 100%;
+                }
 
     .house-renovation-content {
         width: 100%;
