--- a/src/Pages/Gallery/Gallery.css
+++ b/src/Pages/Gallery/Gallery.css
@@ -44,3 +44,22 @@
         justify-content: space-evenly
     }
 }
+@media screen and (max-width: 600px) {
+    .gallery-buttons-container {
+        padding: unset;
+    }
+
+    .gallery-header {
+        font-size: 52px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .gallery-buttons-container {
+        padding: unset;
+    }
+
+    .gallery-header {
+        font-size: 32px;
+    }
+}
